MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/genslide/data
files_DATA = \
    default-bg.pdf \
    default-bg.xcf \
    default-footer.tex \
    default-header.tex \
    default-slide-end.tex \
    default-slide-start.tex \
    default-title-end.tex \
    default-title-start.tex \
    blank-footer.tex \
    blank-header.tex \
    blank-slide-end.tex \
    blank-slide-start.tex \
    blank-title-end.tex \
    blank-title-start.tex

EXTRA_DIST = $(files_DATA)
