MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/genslide/data
files_DATA = \
    default-bg.pdf \
    default-bg.xcf \
    default-footer.tex \
    default-header.tex \
    default-slide-end.tex \
    default-slide-start.tex \
    default-title-end.tex \
    default-title-start.tex \
    blank-footer.tex \
    blank-header.tex \
    blank-slide-end.tex \
    blank-slide-start.tex \
    blank-title-end.tex \
    blank-title-start.tex \
    conf-bg.pdf \
    conf-bg.xcf \
    conf-footer.tex \
    conf-header.tex \
    conf-slide-end.tex \
    conf-slide-start.tex \
    conf-title-end.tex \
    conf-title-start.tex

EXTRA_DIST = $(files_DATA)
